Add Docker Compose configurations for OpenSearch, PostgreSQL, and n8n services
- Created a new docker-compose file for OpenSearch, including configurations for the OpenSearch service, OpenSearch Dashboards, PostgreSQL database, and a custom application.
- Added a separate docker-compose file for n8n service with necessary environment variables and dependencies.
- Introduced a new Ollama service configuration for running the Ollama container with appropriate settings.
- Defined shared networks and volumes for inter-service communication and data persistence.

--- a/files/.env
+++ b/files/.env
@@ -2,7 +2,7 @@
 OPENAI_API_KEY=
 APP_PORT=8080
 
-# Database (PostgreSQL)
+# ==== Database (PostgreSQL) ====
 POSTGRES_USER=logcopilot
 POSTGRES_PASSWORD=logcopilot
 POSTGRES_DB=logcopilot
@@ -22,12 +22,14 @@ OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g
 OPENSEARCH_PLUGINS_SECURITY_DISABLED=true
 OPENSEARCH_PORT=9200
 OPENSEARCH_HOST=http://opensearch:9200
+OPENSEARCH_INITIAL_ADMIN_PASSWORD=UmaSenhaForte#2024!
+OPENSEARCH_PLUGINS_SECURITY_DISABLED=false
 
 # ==== OpenSearch Dashboards ====
 OPENSEARCH_HOSTS=["http://opensearch:9200"]
-OPENSEARCH_SECURITY_ENABLED=false
 SERVER_HOST=0.0.0.0
 DASHBOARDS_PORT=5601
+
 
 # ==== n8n ====
 N8N_BASIC_AUTH_ACTIVE=true
